<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LetsMeet</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="preference">Preference selection</string>
    <string name="registered_user">Don\'t have an account?</string>
    <string name="prompt_email">Your email address</string>
    <string name="prompt_password">Your password</string>
    <string name="prompt_password_again">Repeat password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_postal_code">Postal Code</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_profile">Profile</string>
    <string name="cancel">Cancel</string>
    <string name="terms">By checking the box you agree to our terms and conditions</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_activities">My activities</string>
    <string name="chat">Chat</string>
    <string name="firat">Firat</string>
    <string name="hello">hello</string>
    <string name="_23">23</string>
    <string name="odense">Odense</string>
    <string name="todo">TODO</string>
    <string name="Activities">Activities</string>
    <string name="Chat">Chat</string>
    <string name="hellos">hellos</string>
    <string name="cityprofile">CityProfile</string>
    <string name="nameprofile">NameProfile</string>
    <string name="genderageprofile">GenderAgeProfile</string>
    <string name="picnics">Picnics</string>
    <string name="disney">Disney</string>
    <string name="music">Music</string>
    <string name="yoga">Yoga</string>
    <string name="coffee">Coffee</string>
    <string name="netflix">Netflix</string>
    <string name="shopping">Shopping</string>
    <string name="beer">Beer</string>
    <string name="movies">Movies</string>
    <string name="surfing">Surfing</string>
    <string name="wine">Wine</string>
    <string name="football">Football</string>
    <string name="cooking">Cooking</string>
    <string name="travel">Travel</string>
    <string name="walks">Walks</string>
    <string name="chocolate">Chocolate</string>
    <string name="input_placeholder">Write a message</string>
    <string-array name="titles">
        <item>Chess Match</item>
        <item>Fitness Training</item>
        <item>Football Training</item>
        <item>Football New Year</item>
        <item>Morning Running</item>
        <item>Long Run</item>
        <item>Pokemon GO Raid</item>
        <item>Magic the Gathering</item>
        <item>New Resident</item>
    </string-array>
    <string-array name="description">
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
    </string-array>
    <string-array name="category">
        <item>Boardgame</item>
        <item>Workout</item>
        <item>Football</item>
        <item>Football</item>
        <item>Running</item>
        <item>Running</item>
        <item>Pokemon GO</item>
        <item>Cardgames</item>
        <item>Sightseeing</item>
    </string-array>
    <string-array name="date">
        <item>10-12-2020 at 15:00</item>
        <item>14-12-2020 at 20:45</item>
        <item>04-12-2020 at 10:45</item>
        <item>01-01-2021 at 14:00</item>
        <item>10-11-2020 at 08:50</item>
        <item>01-12-2020 at 13:45</item>
        <item>24-11-2020 at 18:00</item>
        <item>27-12-2020 at 20:00</item>
        <item>15-11-2020 at 14:15</item>
    </string-array>
    <string-array name="titles2">
        <item>Morning Running</item>
        <item>New Resident</item>
        <item>Pokemon GO Raid</item>
        <item>Long Run</item>
        <item>Football Training</item>
        <item>Chess Match</item>
        <item>Fitness Training</item>
        <item>Magic the Gathering</item>
        <item>Football New Year</item>
    </string-array>
    <string-array name="description2">
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</item>
    </string-array>
    <string-array name="category2">
        <item>Running</item>
        <item>Sightseeing</item>
        <item>Pokemon GO</item>
        <item>Running</item>
        <item>Football</item>
        <item>Boardgame</item>
        <item>Workout</item>
        <item>Cardgames</item>
        <item>Football</item>
    </string-array>
    <string-array name="date2">
        <item>10-11-2020 at 08:50</item>
        <item>15-11-2020 at 14:15</item>
        <item>24-11-2020 at 18:00</item>
        <item>01-12-2020 at 13:45</item>
        <item>04-12-2020 at 10:45</item>
        <item>10-12-2020 at 15:00</item>
        <item>14-12-2020 at 20:45</item>
        <item>27-12-2020 at 20:00</item>
        <item>01-01-2021 at 14:00</item>
    </string-array>
    <string-array name="titles3">
        <item>Pokemon GO Raid</item>
        <item>Fitness Training</item>
        <item>Magic the Gathering</item>
        <item>Morning Running</item>
        <item>New Resident</item>
        <item>Football New Year</item>
        <item>Football Training</item>
        <item>Long Run</item>
        <item>Chess Match</item>
    </string-array>
    <string name="next">Next</string>
    <string name="your_likes">Your likes</string>
    <string name="magic">Magic</string>
    <string name="back_button">Back</string>
</resources>