<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Likes">


    <Button
        android:id="@+id/NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/next"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="91dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/letsmeet_foreground" />

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="197dp"
        android:layout_height="193dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/letsmeet_foreground" />

    <CheckBox
        android:id="@+id/PicnicscheckBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/picnics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <CheckBox
        android:id="@+id/disneycheckBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/disney"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <CheckBox
        android:id="@+id/YogacheckBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/yoga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <CheckBox
        android:id="@+id/WalkscheckBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/walks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <CheckBox
        android:id="@+id/ShoppingcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/shopping"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <CheckBox
        android:id="@+id/CoffeecheckBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/coffee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <CheckBox
        android:id="@+id/CookingcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/cooking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <CheckBox
        android:id="@+id/FootballcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/football"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <CheckBox
        android:id="@+id/NetflixcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/netflix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <CheckBox
        android:id="@+id/MusiccheckBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/music"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <CheckBox
        android:id="@+id/Chocolate"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/chocolate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <CheckBox
        android:id="@+id/SurfingcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/surfing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.991"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <CheckBox
        android:id="@+id/MoviescheckBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/movies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.991"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <CheckBox
        android:id="@+id/TravelcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/travel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <CheckBox
        android:id="@+id/WinecheckBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/wine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <CheckBox
        android:id="@+id/BeercheckBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:onClick="selectItem"
        android:text="@string/beer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/ViewData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_likes"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/ShowResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="finalSelection"
        android:text="@string/magic"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.403" />

    <Button
        android:id="@+id/likes_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/back_button"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>