<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.stl.letsmeet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_activities"
        android:name="com.stl.letsmeet.ui.activities.ActivitiesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.stl.letsmeet.ui.Chat.ChatFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_chat" />
</navigation>