<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="1dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/usernameDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firat"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#fff" />
    <TextView
        android:id="@+id/ageDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_23"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#fff" />
    <TextView
        android:id="@+id/cityDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/odense"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#fff"
        />
</LinearLayout>